fixing shooping mall id assignment issues